saving start and end dates of a task

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -424,8 +424,11 @@ a:hover {
 	}
 
 .block table tr.even td {
-	background: #fbfbfb;
-	}
+	background: #f8f8f8;
+}
+.block table.zebra tr:nth-child(2n) td {
+	background: #f8f8f8;
+} 
 	
 .block table tr td,
 .block table tr th {
